downgrade codebase to java 8